# base16-builder-python

./: README.md  pyproject.toml
educe/: __main__.py  builder.py  colorparser.py  updater.py
pybase16_builder/: __main__.py  builder.py  colorparser.py  updater.py
